<?xml version="1.0"?>
<package format="3">
  <name>temp_sensor_sim</name>
  <version>0.0.1</version>
  <description>Simple sensor simulator node publishing Float32 on /sim/temp for science klub KN SPA i BLSPS recrutation</description>
  <maintainer email="jakubbalenkowski@gmail.com">Jakub Balenkowski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
